Styles fix separator on mobile

--- a/src/components/DateCounter/style.scss
+++ b/src/components/DateCounter/style.scss
@@ -78,7 +78,7 @@ $light-font-color: $c_white;
           font-size: 55px;
         }
         &__separator {
-          padding: 12px 20px;
+          padding: 12px 30px;
           font-size: 30px;
         }
       }
@@ -92,7 +92,7 @@ $light-font-color: $c_white;
           font-size: 65px;
         }
         &__separator {
-          padding: 12px 20px;
+          padding: 12px 40px;
           font-size: 40px;
         }
       }
